Fiz algumas ediçoes nos arquivos index, css e

--- a/15_blog/CSS/styles.css
+++ b/15_blog/CSS/styles.css
@@ -1,3 +1,10 @@
+* {
+    font-family: "Montserrat", serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+  }
+
 body {
- background: #ccc; 
+ background: #999999; 
 }
