--- a/15_blog/CSS/styles.css
+++ b/15_blog/CSS/styles.css
@@ -1,10 +1,49 @@
 * {
-    font-family: "Montserrat", serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
+    font-family: "Montserrat", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
 
-body {
- background: #999999; 
+html {
+  min-height: 100vh;
+  position: relative;
+}
+
+main {
+  margin-bottom: 250px;
+}
+
+/* NAVBAR */
+
+#logo {
+  position: absolute;
+  top: 10px;
+  left: 9.5%;
+}
+
+#logo img {
+  width: 50px;
+}
+
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #161616;
+  padding: 20px;
+  text-transform: uppercase;
+  list-style: none;
+}
+
+#navbar li {
+  margin: 0 10px;
+  padding: 5px;
+}
+
+#navbar .nav-link {
+  color: #fff;
+  text-decoration: none;
+  transition: .5s;
+  font-size: 14px;
 }
