Estou editando o arquivo css, editei a parte do #navbar .nav-link:hover e o footer.

--- a/15_blog/CSS/styles.css
+++ b/15_blog/CSS/styles.css
@@ -47,3 +47,17 @@ main {
   transition: .5s;
   font-size: 14px;
 }
+
+#navbar .nav-link:hover {
+  color:#999;
+}
+
+/* FOOTER */
+
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+
