--- a/15_blog/CSS/styles.css
+++ b/15_blog/CSS/styles.css
@@ -1,9 +1,9 @@
 * {
-    font-family: "Montserrat", sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+  font-family: 'Montserrat', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 html {
   min-height: 100vh;
@@ -41,14 +41,14 @@ main {
 }
 
 #navbar .nav-link {
-  color: #fff;
+  color: #FFF;
   text-decoration: none;
   transition: .5s;
   font-size: 14px;
 }
 
 #navbar .nav-link:hover {
-  color:#999;
+  color: #999;
 }
 
 /* HOME */
@@ -76,19 +76,52 @@ main {
   flex-wrap: wrap;
 }
 
-#posts-box:first-child {
+.post-box:first-child {
   min-width: 100%;
 }
 
-#posts-box {
+.post-box {
   flex: 1 1 0;
-  margin: 0 1%;
   margin-bottom: 20px;
 }
 
-#posts-box img {
+.post-box:nth-child(3) {
+  margin: 0 1%;
+}
+
+.post-box img {
   width: 100%;
 }
+
+.post-box .post-title {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.post-box .post-title a {
+  color: #000;
+  transition: .5s;
+}
+
+.post-box .post-title a:hover {
+  color: #999;
+}
+
+.post-box .post-description {
+  color: #666;
+}
+
+.tags-container {
+  margin-top: 10px;
+}
+
+.tags-container a {
+  font-size: 14px;
+  color: #333;
+  display: inline-block;
+  margin-right: 5px;
+}
+
 
 
 
