--- a/15_blog/CSS/styles.css
+++ b/15_blog/CSS/styles.css
@@ -1,9 +1,9 @@
 * {
-    font-family: "Montserrat", sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
+  font-family: 'Montserrat', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 html {
   min-height: 100vh;
@@ -15,7 +15,6 @@ main {
 }
 
 /* NAVBAR */
-
 #logo {
   position: absolute;
   top: 10px;
@@ -42,18 +41,93 @@ main {
 }
 
 #navbar .nav-link {
-  color: #fff;
+  color: #FFF;
   text-decoration: none;
   transition: .5s;
   font-size: 14px;
 }
 
 #navbar .nav-link:hover {
-  color:#999;
+  color: #999;
 }
 
-/* FOOTER */
+/* HOME */
+#title-container {
+  min-width: 500px;
+  text-align: center;
+  margin-top: 30px;
+}
 
+#title-container h1 {
+  font-size: 50px;
+}
+
+#title-container p {
+  margin-top: 10px;
+  text-transform: uppercase;
+  color: #999;
+}
+
+#posts-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.post-box:first-child {
+  min-width: 100%;
+}
+
+.post-box {
+  flex: 1 1 0;
+  margin-bottom: 20px;
+}
+
+.post-box:nth-child(3) {
+  margin: 0 1%;
+}
+
+.post-box img {
+  width: 100%;
+}
+
+.post-box .post-title {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.post-box .post-title a {
+  color: #000;
+  transition: .5s;
+}
+
+.post-box .post-title a:hover {
+  color: #999;
+}
+
+.post-box .post-description {
+  color: #666;
+}
+
+.tags-container {
+  margin-top: 10px;
+}
+
+.tags-container a {
+  font-size: 14px;
+  color: #333;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+
+
+
+
+
+/* FOOTER */
 footer {
   width: 100%;
   position: absolute;
