Comecei a editar o CSS post-container

--- a/15_blog/CSS/styles.css
+++ b/15_blog/CSS/styles.css
@@ -123,7 +123,14 @@ main {
 }
 
 
+/* POST */
 
+#post-container {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: auto;
+  grid-template-areas: "main sidebar";
+}
 
 
 
