--- a/17_agenda/css/style.css
+++ b/17_agenda/css/style.css
@@ -86,5 +86,10 @@
   color: #007bff;
   border-radius: 4px;
   padding: 5px;
+  text-decoration: none;
+}
+
+#back-link:hover {
+  text-decoration: none;
 }
 
