--- a/17_agenda/css/style.css
+++ b/17_agenda/css/style.css
@@ -40,6 +40,10 @@
   color: #007bff;
 }
 
+.delete-form{
+  display: inline-block;
+}
+
 .delete-btn {
   background-color: transparent;
   border: none;
